--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start" : "node index.js"
   },
+  "engines": {
+    "node" :"6.9.5"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
